--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,19 @@
 Package: birch
 Type: Package
 Depends: ellipse
+Suggests: MASS
 Title: Dealing with very large datasets using BIRCH
-Version: 1.1-3
-Date: 2008-02-26
-Author: Justin Harrington, Matias Salibian-Barrera
-Maintainer: Justin Harrington <harringt@stat.ubc.ca>
-Description: birch is an implementation of the algorithms described in Zhang et al (1997), and provides functions for creating CF-trees, along with algorithms for dealing with some combinatorial problems, such as covMcd and ltsReg. It is very well suited for dealing with very large data sets, and does not require that the data can fit in physical memory.  
+Version: 1.2
+Date: 2011-09-14
+Author: Lysiane Charest, Justin Harrington, Matias Salibian-Barrera
+Maintainer: Lysiane Charest <lysiane.charest@hec.ca>
+Description: birch is an implementation of the algorithms described in
+        Zhang et al (1997), and provides functions for creating
+        CF-trees, along with algorithms for dealing with some
+        combinatorial problems, such as covMcd and ltsReg. It is very
+        well suited for dealing with very large data sets, and does not
+        require that the data can fit in physical memory.
 License: GPL
-Packaged: Tue Feb 26 18:07:49 2008; harringt
+Packaged: 2011-09-16 20:15:32 UTC; Lysiane
+Repository: CRAN
+Date/Publication: 2011-09-16 20:54:31
